skills section added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="hero">
       <div class="content">
-        <h1 class="stagger1">Beutifully Crafted Web Experiences</h1>
+        <h1 class="stagger1">Let's Build Something Great</h1>
         <div class="meet stagger1">
           <span>&#x1F447;</span>
           <p>Meet Akash Kumar</p>
@@ -185,6 +185,42 @@
           ></rect>
         </g>
       </svg>
+    </div>
+
+    <div class="skills">
+      <div class="skills__main">
+        <h2>Skills</h2>
+
+        <div class="skills__display">
+          <div class="skills__display-container stagger2">
+            <img src="assets/images/html.svg" alt="htmlIcon" />
+          </div>
+          <div class="skills__display-container stagger2">
+            <img src="assets/images/css.svg" alt="cssIcon" />
+          </div>
+          <div class="skills__display-container stagger2">
+            <img src="assets/images//javascript.svg" alt="jsIcon" />
+          </div>
+          <div class="skills__display-container stagger2">
+            <img src="assets/images/sass.svg" alt="sassIcon" />
+          </div>
+          <div class="skills__display-container stagger2">
+            <img src="assets/images/react.svg" alt="reactIcon" />
+          </div>
+          <div class="skills__display-container stagger2">
+            <img src="assets/images/redux.svg" alt="reduxIcon" />
+          </div>
+          <div class="skills__display-container stagger2">
+            <img src="assets/images/mongodb.svg" alt="mongoIcon" />
+          </div>
+          <div class="skills__display-container stagger2">
+            <img src="assets/images/node.svg" alt="nodeIcon" />
+          </div>
+          <div class="skills__display-container stagger2">
+            <img src="assets/images/git.svg" alt="gitIcon" />
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Scripts -->
