added about section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav>
           <ul>
             <li><a href="#">My work</a></li>
-            <li><a href="#">My Skills</a></li>
+            <li><a href="#skills">My Skills</a></li>
             <li><a href="#">Hire me</a></li>
           </ul>
         </nav>
@@ -187,7 +187,46 @@
       </svg>
     </div>
 
-    <div class="skills">
+    <div class="aboutMe">
+      <div class="aboutMe__main">
+        <h2>About me</h2>
+        <div class="aboutMe__display">
+          <div class="aboutMe__display-image">
+            <img src="assets/images/port.PNG" alt="profilepic" />
+          </div>
+          <div class="aboutMe__display-description">
+            <p>
+              <span
+                >Hi!, My name is Akash Kumar. I'm a Full-stack developer</span
+              >. I'm a graduate of IIIT, Gwalior with an Integrated
+              post-graduation(B.tech+M.tech) degree in the field of Information
+              Technology.I am enthusiastic to learn about more challenges.
+              Besides that, I am an avid sportsperson. I undertook many
+              Positions of Responsibilities in my institute which allow me to
+              manage a rigorous course load along with extracurricular
+              activities which have honed my ability to take on multiple
+              challenges, creative skills and manage my time effectively.
+            </p>
+
+            <!-- <a
+              class="downloadCv"
+              href="assets/docs/AkashKumar.pdf"
+              download="Akash_Kumar"
+              >Download CV</a
+            > -->
+            <button
+              class="downloadCv"
+              type="submit"
+              onclick="window.open('assets/docs/AkashKumar.pdf')"
+            >
+              Download CV
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="skills" class="skills">
       <div class="skills__main">
         <h2>Skills</h2>
 
