--- a/index.html
+++ b/index.html
@@ -28,13 +28,21 @@
       <div class="social-header">
         <ul>
           <li>
-            <a href="#"><i class="bx bxl-github"></i></a>
+            <a href="https://github.com/AkashKumar07" target="_blank"
+              ><i class="bx bxl-github"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="bx bxl-linkedin"></i></a>
+            <a
+              href="https://www.linkedin.com/in/akash-kumar-26300713b/"
+              target="_blank"
+              ><i class="bx bxl-linkedin"></i
+            ></a>
           </li>
           <li>
-            <a href="#"><i class="bx bxl-codepen"></i></a>
+            <a href="https://codepen.io/akashkumar07" target="_blank"
+              ><i class="bx bxl-codepen"></i
+            ></a>
           </li>
         </ul>
       </div>
@@ -208,12 +216,6 @@
               challenges, creative skills and manage my time effectively.
             </p>
 
-            <!-- <a
-              class="downloadCv"
-              href="assets/docs/AkashKumar.pdf"
-              download="Akash_Kumar"
-              >Download CV</a
-            > -->
             <button
               class="downloadCv"
               type="submit"
