added work section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="index.html" class="logo">Akash</a>
         <nav>
           <ul>
-            <li><a href="#">My work</a></li>
+            <li><a href="#work">My work</a></li>
             <li><a href="#skills">My Skills</a></li>
             <li><a href="#">Hire me</a></li>
           </ul>
@@ -259,6 +259,150 @@
           </div>
           <div class="skills__display-container stagger2">
             <img src="assets/images/git.svg" alt="gitIcon" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="work" class="work">
+      <div class="work__main">
+        <h2>work</h2>
+        <div class="work__display">
+          <div class="work__card">
+            <img src="assets/images/websites/yelpcamp.PNG" alt="yelpcamp" />
+            <div class="work__card-links">
+              <a href="https://github.com/AkashKumar07/YelpCamp" alt="github"
+                ><i class="bx bxl-github"></i>
+                <p>Github</p></a
+              >
+              <a href="https://cryptic-eyrie-16174.herokuapp.com/" alt="website"
+                ><i class="bx bx-globe"></i>
+                <p>Website</p></a
+              >
+            </div>
+          </div>
+          <div class="work__card">
+            <img src="assets/images/websites/ak.PNG" alt="base apparel" />
+            <div class="work__card-links">
+              <a href="https://github.com/akash-kumar07/AK_dev" alt="github"
+                ><i class="bx bxl-github"></i>
+                <p>Github</p></a
+              >
+              <a href="https://ak-international.herokuapp.com/" alt="website"
+                ><i class="bx bx-globe"></i>
+                <p>Website</p></a
+              >
+            </div>
+          </div>
+          <div class="work__card">
+            <div class="githubwars">
+              <span><b>./Github</b></span
+              ><span><b>Wars</b></span>
+            </div>
+            <div class="work__card-links">
+              <a href="https://github.com/AkashKumar07/GithubWars" alt="github"
+                ><i class="bx bxl-github"></i>
+                <p>Github</p></a
+              >
+              <a href="https://githubwars-31f23.web.app/" alt="website"
+                ><i class="bx bx-globe"></i>
+                <p>Website</p></a
+              >
+            </div>
+          </div>
+          <div class="work__card">
+            <img
+              src="assets/images/websites/burger_builder.PNG"
+              alt="burgerBuilder"
+            />
+            <div class="work__card-links">
+              <a
+                href="https://github.com/AkashKumar07/Burger-Builder"
+                alt="github"
+                ><i class="bx bxl-github"></i>
+                <p>Github</p></a
+              >
+              <a
+                href="https://burger-builder-4c53d.firebaseapp.com/"
+                alt="website"
+                ><i class="bx bx-globe"></i>
+                <p>Website</p></a
+              >
+            </div>
+          </div>
+          <div class="work__card">
+            <img src="assets/images/websites/trello.PNG" alt="trello clone" />
+            <div class="work__card-links">
+              <a href="https://github.com/AkashKumar07/TrelloClone" alt="github"
+                ><i class="bx bxl-github"></i>
+                <p>Github</p></a
+              >
+              <a
+                href="https://akashkumar07.github.io/TrelloClone/"
+                alt="website"
+                ><i class="bx bx-globe"></i>
+                <p>Website</p></a
+              >
+            </div>
+          </div>
+          <div class="work__card">
+            <img src="assets/images/websites/relaxer.PNG" alt="relaxer" />
+            <div class="work__card-links">
+              <a href="https://github.com/AkashKumar07/Relaxer" alt="github"
+                ><i class="bx bxl-github"></i>
+                <p>Github</p></a
+              >
+              <a href="https://relaxer-c4a4b.web.app/relaxer" alt="website"
+                ><i class="bx bx-globe"></i>
+                <p>Website</p></a
+              >
+            </div>
+          </div>
+          <div class="work__card">
+            <img src="assets/images/websites/colorGame.PNG" alt="color game" />
+            <div class="work__card-links">
+              <a href="https://github.com/AkashKumar07/colorGame" alt="github"
+                ><i class="bx bxl-github"></i>
+                <p>Github</p></a
+              >
+              <a href="https://akashkumar07.github.io/colorGame/" alt="website"
+                ><i class="bx bx-globe"></i>
+                <p>Website</p></a
+              >
+            </div>
+          </div>
+          <div class="work__card">
+            <img src="assets/images/websites/faqCard.PNG" alt="faqCard" />
+            <div class="work__card-links">
+              <a href="https://github.com/AkashKumar07/faq-card" alt="github"
+                ><i class="bx bxl-github"></i>
+                <p>Github</p></a
+              >
+              <a href="https://akashkumar07.github.io/faq-card/" alt="website"
+                ><i class="bx bx-globe"></i>
+                <p>Website</p></a
+              >
+            </div>
+          </div>
+          <div class="work__card">
+            <img
+              src="assets/images/websites/baseApperal.PNG"
+              alt="base apparel"
+            />
+            <div class="work__card-links">
+              <a
+                href="https://github.com/AkashKumar07/base-apparel"
+                alt="github"
+                ><i class="bx bxl-github"></i>
+                <p>Github</p></a
+              >
+              <a
+                href="https://akashkumar07.github.io/base-apparel/"
+                alt="website"
+                ><i class="bx bx-globe"></i>
+                <p>Website</p></a
+              >
+            </div>
           </div>
         </div>
       </div>
