added hireme section

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <ul>
             <li><a href="#work">My work</a></li>
             <li><a href="#skills">My Skills</a></li>
-            <li><a href="#">Hire me</a></li>
+            <li><a href="#hireme">Hire me</a></li>
           </ul>
         </nav>
       </header>
@@ -216,6 +216,28 @@
               challenges, creative skills and manage my time effectively.
             </p>
 
+            <div class="social">
+              <ul>
+                <li>
+                  <a href="https://github.com/AkashKumar07" target="_blank"
+                    ><i class="bx bxl-github"></i
+                  ></a>
+                </li>
+                <li>
+                  <a
+                    href="https://www.linkedin.com/in/akash-kumar-26300713b/"
+                    target="_blank"
+                    ><i class="bx bxl-linkedin"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="https://codepen.io/akashkumar07" target="_blank"
+                    ><i class="bx bxl-codepen"></i
+                  ></a>
+                </li>
+              </ul>
+            </div>
+
             <button
               class="downloadCv"
               type="submit"
@@ -404,6 +426,42 @@
               >
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="hireme" class="hireme">
+      <div class="hireme__main">
+        <h2>Hire me</h2>
+        <p class="caption stagger3">
+          Let's work together to build something great!
+        </p>
+        <p class="phone stagger3">
+          <a href="tel:+91-9985689861">+91-9985689861</a>
+        </p>
+        <p class="email stagger3">
+          <a href="mailto:akashkumar3432@gmail.com">akashkumar3432@gmail.com</a>
+        </p>
+        <div class="contactLinks stagger3">
+          <ul class="contactLinks__list">
+            <li>
+              <a href="https://github.com/AkashKumar07" target="_blank"
+                ><i class="bx bxl-github"></i
+              ></a>
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/akash-kumar-26300713b/"
+                target="_blank"
+                ><i class="bx bxl-linkedin"></i
+              ></a>
+            </li>
+            <li>
+              <a href="https://codepen.io/akashkumar07" target="_blank"
+                ><i class="bx bxl-codepen"></i
+              ></a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
