--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <button
               class="downloadCv"
               type="submit"
-              onclick="window.open('assets/docs/AkashKumar.pdf')"
+              onclick="window.open('assets/docs/Akash_Kumar.pdf')"
             >
               Download CV
             </button>
