--- a/index.html
+++ b/index.html
@@ -304,19 +304,6 @@
             </div>
           </div>
           <div class="work__card">
-            <img src="assets/images/websites/ak.PNG" alt="base apparel" />
-            <div class="work__card-links">
-              <a href="https://github.com/akash-kumar07/AK_dev" alt="github"
-                ><i class="bx bxl-github"></i>
-                <p>Github</p></a
-              >
-              <a href="https://ak-international.herokuapp.com/" alt="website"
-                ><i class="bx bx-globe"></i>
-                <p>Website</p></a
-              >
-            </div>
-          </div>
-          <div class="work__card">
             <div class="githubwars">
               <span><b>./Github</b></span
               ><span><b>Wars</b></span>
@@ -327,6 +314,41 @@
                 <p>Github</p></a
               >
               <a href="https://githubwars-31f23.web.app/" alt="website"
+                ><i class="bx bx-globe"></i>
+                <p>Website</p></a
+              >
+            </div>
+          </div>
+          <div class="work__card">
+            <img
+              src="assets/images/websites/movieSearch.PNG"
+              alt="movieSearch"
+            />
+            <div class="work__card-links">
+              <a
+                href="https://github.com/AkashKumar07/movie_search"
+                alt="github"
+                ><i class="bx bxl-github"></i>
+                <p>Github</p></a
+              >
+              <a
+                href="https://akashkumar07.github.io/movie_search"
+                alt="website"
+                ><i class="bx bx-globe"></i>
+                <p>Website</p></a
+              >
+            </div>
+          </div>
+          <div class="work__card">
+            <img src="assets/images/websites/trello.PNG" alt="trello clone" />
+            <div class="work__card-links">
+              <a href="https://github.com/AkashKumar07/TrelloClone" alt="github"
+                ><i class="bx bxl-github"></i>
+                <p>Github</p></a
+              >
+              <a
+                href="https://akashkumar07.github.io/TrelloClone/"
+                alt="website"
                 ><i class="bx bx-globe"></i>
                 <p>Website</p></a
               >
@@ -353,34 +375,6 @@
             </div>
           </div>
           <div class="work__card">
-            <img src="assets/images/websites/trello.PNG" alt="trello clone" />
-            <div class="work__card-links">
-              <a href="https://github.com/AkashKumar07/TrelloClone" alt="github"
-                ><i class="bx bxl-github"></i>
-                <p>Github</p></a
-              >
-              <a
-                href="https://akashkumar07.github.io/TrelloClone/"
-                alt="website"
-                ><i class="bx bx-globe"></i>
-                <p>Website</p></a
-              >
-            </div>
-          </div>
-          <div class="work__card">
-            <img src="assets/images/websites/relaxer.PNG" alt="relaxer" />
-            <div class="work__card-links">
-              <a href="https://github.com/AkashKumar07/Relaxer" alt="github"
-                ><i class="bx bxl-github"></i>
-                <p>Github</p></a
-              >
-              <a href="https://relaxer-c4a4b.web.app/relaxer" alt="website"
-                ><i class="bx bx-globe"></i>
-                <p>Website</p></a
-              >
-            </div>
-          </div>
-          <div class="work__card">
             <img src="assets/images/websites/colorGame.PNG" alt="color game" />
             <div class="work__card-links">
               <a href="https://github.com/AkashKumar07/colorGame" alt="github"
@@ -394,13 +388,26 @@
             </div>
           </div>
           <div class="work__card">
-            <img src="assets/images/websites/faqCard.PNG" alt="faqCard" />
+            <img src="assets/images/websites/ak.PNG" alt="base apparel" />
             <div class="work__card-links">
-              <a href="https://github.com/AkashKumar07/faq-card" alt="github"
+              <a href="https://github.com/akash-kumar07/AK_dev" alt="github"
                 ><i class="bx bxl-github"></i>
                 <p>Github</p></a
               >
-              <a href="https://akashkumar07.github.io/faq-card/" alt="website"
+              <a href="https://ak-international.herokuapp.com/" alt="website"
+                ><i class="bx bx-globe"></i>
+                <p>Website</p></a
+              >
+            </div>
+          </div>
+          <div class="work__card">
+            <img src="assets/images/websites/relaxer.PNG" alt="relaxer" />
+            <div class="work__card-links">
+              <a href="https://github.com/AkashKumar07/Relaxer" alt="github"
+                ><i class="bx bxl-github"></i>
+                <p>Github</p></a
+              >
+              <a href="https://relaxer-c4a4b.web.app/relaxer" alt="website"
                 ><i class="bx bx-globe"></i>
                 <p>Website</p></a
               >
